charts/reactive-resume/tmp/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/reactive-resume-default: "true"
        io.kompose.service: client
    spec:
      containers:
        - env:
            - name: PUBLIC_GOOGLE_CLIENT_ID
            - name: PUBLIC_SERVER_URL
              value: http://localhost:3100
            - name: PUBLIC_URL
              value: http://localhost:3000
          image: amruthpillai/reactive-resume:client-latest
          name: client
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
