charts/reactive-resume/tmp/reactive-resume-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: reactive-resume-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/reactive-resume-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/reactive-resume-default: "true"
